--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  image_picker: ^1.0.7
   cupertino_icons: ^1.0.8
   uuid: ^4.5.2
+  intl: ^0.19.0
+  pdf: ^3.10.7
+  printing: ^5.12.0
+  share_plus: ^7.2.2
 
 dev_dependencies:
   flutter_test:
